refactor: small adjustements to aop